# xcsv-plot

./: .gitignore  README.md  pyproject.toml
tests/: test_xcsv_plot.py
xcsv/plot/: __init__.py  __main__.py
